Sun Feb 16 23:29:09 1997  Richard Basch  <basch@lehman.com>

	* pcbc_encrypt.c: Export des_pcbc_encrypt (win16/win32)

Thu Nov 21 11:55:16 EST 1996    Richard Basch   <basch@lehman.com>

        * Makefile.in: win32 build

	* des.c, des.h, key_sched.c, new_rnd_key.c, pcbc_encrypt.c,
	read_passwd.c, unix_time.c:
		DLL export various functions (mostly for wintel)

Wed Jan  8 01:31:22 1997  Ezra Peisach  <epeisach@mit.edu>

	* Makefile.in (clean-unix, install-unix): Properly install and clean.

Mon Jan  6 07:47:56 1997  Ezra Peisach  <epeisach@mit.edu>

	* configure.in, Makefile.in: Update to new library building procedure.

Mon Nov 18 20:39:02 1996  Ezra Peisach  <epeisach@mit.edu>

	* configure.in: Set shared library version to 1.0. [krb5-libs/201]

Wed Aug  7 12:50:36 1996  Ezra Peisach  <epeisach@mit.edu>

	* new_rnd_key.c (des_set_sequence_number): Change cast to
		krb5_octet to char *. 

	* des.c (des_ecb_encrypt): Add const keyword in cast to make
		suncc happy.   

Tue May 21 20:42:16 1996  Sam Hartman  <hartmans@mit.edu>

	* Makefile.in (check-unix): Use KRB5_RUN_FLAGS

Mon May 13 15:24:18 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* Makefile.in (SHLIB_LIBS): For shared library, add dependency on
		libkrb5.so 

	* configure.in (CRYPTO_SH_VERS): Pass krb5 shared library version
		to Makefile.

Sat May 11 17:36:26 EDT 1996  Richard Basch  <basch@lehman.com>

	* new_rnd_key.c: Use sizeof(mit_des_cblock) instead of sizeof(key)
	so that we copy the full DES key instead of only 4 bytes.

Thu May  2 18:44:02 1996  Richard Basch  <basch@lehman.com>

	* random_key.c new_rnd_key.c:
	Use the rewritten random number routines of libcrypto

Fri Oct  6 22:01:18 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in: Remove ##DOS!include of config/windows.in.
		config/windows.in is now included by wconfig.

Mon Oct  2 11:07:24 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* configure.in (V5_MAKE_SHARED_LIB): Change rule to install